# the-beacon

./: .env.example  .gitignore  COMMANDS.md  README.md  compose.yaml  package-lock.json  package.json  pyproject.toml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260313_01_initial_schema.py  20260317_01_auth_verification_foundation.py  20260318_01_link_post_dedupe_guard.py  20260318_02_active_verification_token_guard.py  20260324_01_verification_delivery_tracking.py  20260324_02_source_poll_cache_headers.py  20260324_03_ingestion_item_url_fallback_uniqueness.py  20260324_04_add_ingestion_item_moderation_target.py
apps/api/tests/: test_auth.py  test_auth_delivery.py  test_auth_hardening.py  test_auth_security.py  test_auth_service.py  test_config.py  test_creation_helpers.py  test_creation_routes.py  test_db_session.py  test_feed_snapshots.py  test_flags.py  test_health.py  test_ingestion_foundation.py  test_ingestion_persistence.py  test_ingestion_polling.py  test_ingestion_publication.py  test_job_expiry.py  test_moderation.py  test_ranking_refresh.py  test_rate_limit.py  test_reads.py  test_reads_helpers.py  test_reconciliation.py  test_schema_metadata.py  test_stats.py  test_user_roles.py  test_voting_helpers.py  test_voting_routes.py
apps/worker/: pyproject.toml
apps/worker/tests/: test_expire_job_posts_job.py  test_locks.py  test_poll_rss_sources_job.py  test_reconcile_vote_counts_job.py  test_refresh_feed_snapshots_job.py  test_refresh_post_scores_job.py  test_scheduler.py
docs/: API_SPEC.md  MVP_SCOPE.md  (+13 more)
(+142 files in other folders)
