[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rifthub-api"
version = "0.1.0"
description = "FastAPI entrypoint for RiftHub."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14,<2.0",
    "fastapi>=0.115,<1.0",
    "rifthub-backend",
    "uvicorn>=0.35,<1.0",
]

[project.scripts]
rifthub-api = "rifthub_api.main:run"

[dependency-groups]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rifthub_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.uv.sources]
rifthub-backend = { workspace = true }
